syntax = "proto3";

package get_license_request;

message GetLicenseRequest {
    string user_id = 1;
    uint64 timestamp = 20;
}

message GetLicenseResponse {
    // a map of product_ids to license info
    map<string, LicenseInfo> licensed_products = 1;
    uint64 timestamp = 20;
}

message LicenseInfo {
    repeated Machine machines = 1;
    uint32 machine_limit = 2;
}

message Machine {
    string os = 1;
    string computer_name = 2;
}